# functional

./: .travis.yml  CMakeLists.txt  README.md
src/: Functional.h
src/functional/: CMakeLists.txt  Constant.h  FunctionalUtil.h  LTIHomogeneousSolution.h  Linear.h  Piecewise.h  Polynomial.cpp  Polynomial.h  Sum.h  Traits.h  Typedefs.h
test/: CMakeLists.txt  testUtil.h
test/functional/: CMakeLists.txt  testPiecewise.cpp  testPiecewisePolynomial.cpp  testPolynomial.cpp  testTraits.cpp
